# automated-data-analysis

./: .gitignore  App.py  README.md  app.py  main.py  plotting.py  prompts.py  pyproject.toml  requirements.txt  tools.py  utils.py
insight_agent/: __init__.py  agent.py  utils.py
sql_agent/: __init__.py  agent.py  llm.py
src/agents/: __init__.py  insight_agent.py  insight_utils.py  llm.py  sql_agent.py
src/plotting/: plot_generator.py
src/utils/: data_utils.py
