[project]
name = "automated-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "dotenv>=0.9.9",
    "google-genai>=1.31.0",
    "pandas>=2.3.1",
    "pandas-stubs>=2.3.0.250703",
    "stubs>=1.0.0",
    "types-colorama>=0.4.15.20250801",
    "types-requests>=2.32.4.20250809",
]
